app/src/main/java/com/gdavidpb/test/domain/usecase/errors/LookupAlbumsError.kt
package com.gdavidpb.test.domain.usecase.errors

sealed class LookupAlbumsError {
    class NoConnection(val isNetworkAvailable: Boolean) : LookupAlbumsError()
}